--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.29.0
-pandas==1.4.2
-numpy==1.22.3
-matplotlib==3.8.0
-scikit-learn==1.3.2
-Pillow==10.2.0
+streamlit>=1.29.0
+pandas>=2.1.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
+joblib>=1.3.0
+Pillow>=10.2.0
